# Smeagle

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dyninst  Makefile  README.md  README_8md.html  abi__description_8h.html  about.html  about_8dox.html  annotated.html  classsmeagle_1_1Corpus.html  classsmeagle_1_1Smeagle.html  classsmeagle_1_1parameter.html  corpora_8h.html  development.md  dir_49b5755240fd544771bd158d31fb9878.html  files.html  index.html  modules.html  namespaceDyninst.html  namespaceSymtabAPI.html  namespaces.html  namespacesmeagle.html  pages.html  parameter_8h.html  run.sh  runsmeagle.cc  searchdata-v1.js  smeagle_8h.html  structsmeagle_1_1abi__description.html  structsmeagle_1_1abi__function__description.html  structsmeagle_1_1abi__variable__description.html  test.cpp
.github/workflows/: build-deploy.yaml  documentation.yaml  main.yaml  standalone.yml  style.yml  ubuntu.yml
all/: CMakeLists.txt
docker/: Dockerfile.dyninst  Dockerfile.pytest
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox
include/smeagle/: TypeLocation.h  abi_description.h  corpora.h  parameter.h  smeagle.h
source/: README.md  corpora.cpp  smeagle.cpp
source/detail/parser/: aarch64.cpp  aarch64.hpp  ppc64le.cpp  ppc64le.hpp  x86_64.cpp  x86_64.hpp
source/parser/ppc64le/: ppc64le.cpp
source/parser/x86_64/: allocators.cpp  allocators.hpp  callsites.hpp  classifiers.hpp  register_class.hpp  type_checker.hpp  types.hpp  x86_64.cpp  x86_64.hpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: allocation.cpp  directionality.cpp  main.cpp  smeagle.cpp
test/source/libs/: allocation.cpp  directionality.cpp  gen_allocation.py
